Add buttons and add functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Page Title</title>
 </head>
 <body>
-    <script src="code.js"></script> 
+  <h1>ROCK, PAPER, SCISSORS GAME</h1>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <div id="results"></div>
+  <script src="script.js"></script> 
 </body>
 </html>
