--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <button id="paper">Paper</button>
   <button id="scissors">Scissors</button>
   <div id="results"></div>
+  <button id="refresh" onClick="window.location.reload();">Refresh Page</button>
   <script src="script.js"></script> 
 </body>
 </html>
